Fixing gravity and jump speed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,11 +64,6 @@ body {
     width: 100%;
     bottom: 0;
     left: calc(var(--left) * 1%) 
-    /*position: absolute;
-    left: 0;
-    bottom:0;
-    width: 100%;
-    height: 100px;*/
 }
 
 /* How to playe button and modal for instructions */
@@ -146,3 +141,6 @@ body {
     color: #87CEEB;
     background-color: #fff;
   }
+
+  /* Footer */
+
